feat(update): Faz o put de alocacao, turma e atividade
