# src/main/java/br/com/barata/baragym/controller/turma/TurmaListarController.java
@@ -7,10 +7,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+
+import javax.validation.constraints.NotBlank;
 
 @RestController
 @RequestMapping(value = "/turmas", produces = MediaType.APPLICATION_JSON_VALUE)
@@ -23,9 +22,15 @@ public class TurmaListarController {
  @GetMapping
  @PreAuthorize("hasAnyRole('ADMIN')")
  public Page<Turma> listaTurmas(@RequestParam(name = "page", required = false, defaultValue = "0") Integer page,
-                                @RequestParam(name = "size", required = false, defaultValue = "10") Integer size) {
+								@RequestParam(name = "size", required = false, defaultValue = "10") Integer size) {
 
   return turmaService.listarTodasTurmas(PageRequest.of(page, size));
+ }
+
+ @GetMapping("/{turmaId}")
+ @PreAuthorize("hasAnyRole('ADMIN')")
+ public Turma obtemTurma(@PathVariable("turmaId") @NotBlank Long turmaId) {
+  return turmaService.obterTurma(turmaId);
  }
 
 }
