# src/main/java/br/com/barata/baragym/entity/converter/AlocacaoConverter.java
@@ -3,18 +3,23 @@ package br.com.barata.baragym.entity.converter;
 import br.com.barata.baragym.entity.AlocacaoEntity;
 import br.com.barata.baragym.infrastructure.stereotype.Converter;
 import br.com.barata.baragym.model.Alocacao;
+import br.com.barata.baragym.model.GenericIdAndNome;
 import org.springframework.data.domain.Page;
 
 @Converter
 public class AlocacaoConverter {
 
  public Alocacao convertToModel(AlocacaoEntity entity) {
+  GenericIdAndNome atividade = createGeneric(entity.getAtividade().getId(), entity.getAtividade().getNome());
+  GenericIdAndNome diaSemana = createGeneric(entity.getDiaSemana().getId(), entity.getDiaSemana().getNomeDia());
+  GenericIdAndNome turma = createGeneric(entity.getTurma().getId(), entity.getTurma().getNome());
+
   return Alocacao
 		  .builder()
 		  .id(entity.getId())
-		  .nomeAtividade(entity.getAtividade().getNome())
-		  .nomeDiaSemana(entity.getDiaSemana().getNomeDia())
-		  .nomeTurma(entity.getTurma().getNome())
+		  .atividade(atividade)
+		  .diaSemana(diaSemana)
+		  .turma(turma)
 		  .horaInicio(entity.getHoraInicio())
 		  .horaFim(entity.getHoraFim())
 		  .build();
@@ -22,5 +27,12 @@ public class AlocacaoConverter {
 
  public Page<Alocacao> convertToModel(Page<AlocacaoEntity> entityPage) {
   return entityPage.map(this::convertToModel);
+ }
+
+ protected GenericIdAndNome createGeneric(Long id, String nome) {
+  return GenericIdAndNome.builder()
+		  .id(id)
+		  .nome(nome)
+		  .build();
  }
 }
